# Adequation-CV-Offre

./: README.md
Crewai/: README.md  improved_cv.md  lettre_de_motivation.md  pyproject.toml  report.md  training_data.pkl
Crewai/src/projetcv/: crew.py  main.py  scripImportExport.py  test.py
Crewai/src/projetcv/config/: agents.yaml  tasks.yaml
Crewai/src/projetcv/resources/: CV_KAISS.txt  grille_eval.txt
Crewai/src/projetcv/tools/: custom_tool.py
projet/: bouchatr1u_projetcv3-6.sql
projet/controleur/: PageMotivation.php  PageProfil.php  affichageAnalyse.php  chargement.php  chek_tach.php  historiqueCV.php  inscription.php  login.php  oubliemdp.php  pageUtilisateur.php  recup.php  settings.php  upload.php  verifierLien.php
projet/js/: translations.js
projet/modele/: analyse.class.php  analyseDAO.php  connexion.php  cvs.class.php  cvsDAO.php  historique.class.php  historiqueDAO.php  langageDAO.php  language.class.php  offre.class.php  offreDAO.php  taches.class.php  tachesDAO.php  utilisateur.class.php  utilisateurDAO.php
projet/public/: PageAccueille.html  PageMotivation.view.php  PageUtilisateur.view.php  affichageAnalyse.view.php  aide.view.php  chargement.view.php  erreur.html  historiqueCV.view.php  importLien.view.php  importationCV.view.php  inscription.view.php  login-fr.html  login.view.php  oubliemdp.view.php  pageProfil.view.php  register-fr.html  settings-fr.html
projet/test/: test.py  test1.py  test3.py
projet/uploads/: Compte_rendu_n°8.docx
projet/utils/: CovertFichier.php  check_taches.php  convertisseur.py  retrieve_pdf.py
(+14 files in other folders)
